--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "csv-parse": "^5.5.6",
     "@google/generative-ai": "^0.24.1",
     "axios": "^1.12.1",
     "cors": "^2.8.5",
